# CodingChallengesFYI.CCUPTIME-cpp

./: .gitignore  CMakeLists.txt  README.md
include/cliArgs/: options.hpp  usage.hpp
include/daemon/: daemon.hpp  daemonOptions.hpp
include/logger/: consoleLogger.hpp  fileLogger.hpp  logger.hpp
include/setup/: setup.hpp
include/uptime/: checker.hpp
include/utils/: dateTimeUtils.hpp
src/: CMakeLists.txt  main.cpp
src/cliArgs/: options.cpp  usage.cpp
src/daemon/: daemon.cpp
src/logger/: consoleLogger.cpp  fileLoger.cpp  fileLogger.cpp  logger.cpp
src/setup/: setup.cpp
src/uptime/: checker.cpp
src/utils/: dateTimeUtils.cpp
tests/: CMakeLists.txt  main.cpp
tests/cliArgs/: optionsTests.cpp
